force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterionValue__c/KimbleOne__DeliveryPortfolioCriterionValue__c.object-meta.xml
<CustomObject>
    <label>Z_Obs - Delivery Portfolio Crit Value</label>
    <nameField>
        <label>DeliveryPortfolioCriteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DeliveryPortfolioCriteriaValues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>