force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterionValue__c/fields/KimbleOne__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>