force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterionValue__c/fields/KimbleOne__DeliveryPortfolio__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryPortfolio__c</fullName>
    <label>Delivery Portfolio</label>
    <referenceTo>KimbleOne__DeliveryPortfolio__c</referenceTo>
    <relationshipName>DeliveryPortfolioCriteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>