force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterionValue__c/fields/KimbleOne__DeliveryPortfolioCriterion__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryPortfolioCriterion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Portfolio Criterion</label>
    <referenceTo>KimbleOne__DeliveryPortfolioCriterion__c</referenceTo>
    <relationshipLabel>DeliveryPortfolioCriteriaValues</relationshipLabel>
    <relationshipName>DeliveryPortfolioCriteriaValues</relationshipName>
    <type>Lookup</type>
</CustomField>