force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterionValue__c/fields/KimbleOne__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberValue__c</fullName>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>