force-app/main/default/objects/KimbleOne__DeliveryPortfolioCriterionValue__c/fields/KimbleOne__StringValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StringValue__c</fullName>
    <label>String Value</label>
    <type>TextArea</type>
</CustomField>